@@ -80,7 +80,7 @@ contains
   subroutine calc_lithot1d(model)
     use glide_types
     use glimmer_utils
-    use glide_mask
+    use glimmer_mask
     implicit none
     type(glide_global_type),intent(inout) :: model       !*FD model instance
 
